<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.dhbw.rahmlab</groupId>
    <artifactId>JCasADi_Maxima</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <exec.mainClass>de.dhbw.rahmlab.casadimaxima.JCasADi_Maxima</exec.mainClass>
        <antlr.version>4.13.1</antlr.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.dhbw.rahmlab</groupId>
            <artifactId>JCasADi</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr.version}</version>
            <scope>compile</scope>
            <!-- needs to be transitive as part of the own API -->
            <optional>false</optional>
        </dependency>
        <!-- Needed for AntlrTestRig -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4</artifactId>
            <version>4.13.1</version>
        </dependency>
        <!-- -->
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>1.0.1</version>
            <!-- Supress transitivity -->
            <optional>true</optional>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/antlr4</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>${antlr.version}</version>
                <configuration>
                    <listener>true</listener>
                    <visitor>true</visitor>
                    <treatWarningsAsErrors>false</treatWarningsAsErrors>
                    <detail>true</detail>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <!-- annotation processing of auto-service -->
                    <compilerArgs>-proc:full</compilerArgs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.google.auto.service</groupId>
                        <artifactId>auto-service</artifactId>
                        <version>1.0.1</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
